# vietnam-traffic-sign-recognition

./: .gitignore  README.md  flow.md  main.py  pyproject.toml  run.md
api/: main.py
data/vn-traffic-signs/: data.yaml
fe/: index.html  package-lock.json  package.json
fe/src/: App.jsx  styles.css  viMap.js
runs/detect/artifacts/yolo_detect_cls/flow1_train/: args.yaml  results.csv
runs/detect/artifacts/yolo_detect_cls/flow1_train2/: args.yaml
runs/detect/artifacts/yolo_detect_cls/flow1_train3/: args.yaml
runs/detect/artifacts/yolo_detect_cls/flow1_train4/: args.yaml
runs/detect/artifacts/yolo_detect_cls/flow1_train5/: args.yaml
runs/detect/artifacts/yolo_detect_cls/flow1_train6/: args.yaml  results.csv
src/: __init__.py
src/infer/: __init__.py  infer_flow1_yolo_yolo.py
src/pipelines/: flow1_pipeline.py
src/train/: train_yolo.py
tien_do_cong_viec/: week_1_research_data.md  week_2_research_model.md  week_2_setup_flow.md  week_3_setup_project.md  week_4_progress.md
tien_do_cong_viec/plan/: de_cuong.docx  plan.docx
