[project]
name = "vietnam-traffic-sign-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "python-multipart>=0.0.29",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "ultralytics>=8.4.37",
    "uvicorn>=0.48.0",
    "websockets>=16.0",
]
